<resources>
    <string name="empty_rides_description">You don\'t have any rides added yet.\nAdd your first ride and start tracking your bike\'s service cycles.</string>
    <string name="ride_title">Ride Title</string>
    <string name="bike">Bike</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="duration_input_template">%1$dh, %2$dmin</string>
    <string name="date_input_template">%1$s.%2$s.%3$d</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="no_bike_selected_error">You don\'t have any bikes added yet! Add a bike and try again</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>