<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginHorizontal="12dp"
    android:background="@color/app_darker_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:layout_marginEnd="20dp"
        android:textColor="@color/app_light_gray"
        android:textFontWeight="@integer/text_normal_weight"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toStartOf="@id/day_spinner"
        app:layout_constraintTop_toTopOf="@id/day_spinner"
        app:layout_constraintBottom_toBottomOf="@id/day_spinner"/>

    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:layout_marginEnd="20dp"
        android:textColor="@color/app_light_gray"
        android:textFontWeight="@integer/text_normal_weight"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toStartOf="@id/month_spinner"
        app:layout_constraintTop_toTopOf="@id/month_spinner"
        app:layout_constraintBottom_toBottomOf="@id/month_spinner"/>

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_spinner"/>

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/year"
        android:layout_marginEnd="20dp"
        android:textColor="@color/app_light_gray"
        android:textFontWeight="@integer/text_normal_weight"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintEnd_toStartOf="@id/year_spinner"
        app:layout_constraintTop_toTopOf="@id/year_spinner"
        app:layout_constraintBottom_toBottomOf="@id/year_spinner"/>

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month_spinner"/>

    <FrameLayout
        android:id="@+id/set_button_frame"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@id/month_spinner"
        app:layout_constraintBottom_toBottomOf="@id/month_spinner"
        app:layout_constraintStart_toEndOf="@id/month_spinner">

        <ImageButton
            android:id="@+id/set_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="@color/app_light_gray"
            android:textFontWeight="@integer/text_normal_weight"
            android:textSize="@dimen/button_text_size" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>