<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginHorizontal="12dp"
    android:background="@color/app_darker_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/hours_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textColor="@color/app_light_gray"
        android:textFontWeight="@integer/text_normal_weight"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hours_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/hours_edit_text"/>

    <EditText
        android:id="@+id/hours_edit_text"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_text_input_bg"
        android:inputType="number"
        android:paddingStart="12dp"
        android:textColor="@color/app_white"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintStart_toEndOf="@id/hours_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/minutes"
        android:textColor="@color/app_light_gray"
        android:textFontWeight="@integer/text_normal_weight"
        android:textSize="@dimen/tab_bar_text_size"
        app:layout_constraintStart_toEndOf="@id/hours_edit_text"
        app:layout_constraintTop_toTopOf="@id/minutes_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/minutes_edit_text"/>

    <EditText
        android:id="@+id/minutes_edit_text"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_text_input_bg"
        android:inputType="number"
        android:paddingStart="12dp"
        android:textColor="@color/app_white"
        android:textSize="@dimen/input_text_size"
        app:layout_constraintStart_toEndOf="@id/minutes_label"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/set_button_frame"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toTopOf="@id/minutes_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/minutes_edit_text"
        app:layout_constraintStart_toEndOf="@id/minutes_edit_text">

        <ImageButton
            android:id="@+id/set_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="@color/app_light_gray"
            android:textFontWeight="@integer/text_normal_weight"
            android:textSize="@dimen/button_text_size" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>